fix new tweet position so it does not scroll and z-index so that scrolling feed doesn't show up in the box

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,4 +1,7 @@
 section.new-tweet {
+    position: fixed;
+    z-index: 3;
+    width: 386px;
     background-color: #eee;
     padding: 10px;
     border: solid 1px darkgray;
